# devteam_grewai_research

./: README.md  pyproject.toml
src/devteam/: crew.py  final_report.md  intermediate_research_results.md  main.py  test_grew.py
src/devteam/config/: tasks.yaml
